# reagary

./: .gitignore  AGENTS.md  README.md  cli_runner.py  main.py  pyproject.toml  ruff.toml
reagent/: AGENTS.md  __init__.py  applier.py  core.py  handler.py  models.py  parser.py  protocols.py  utils.py  validation.py
reagent/core/: __init__.py
reagent/handler/: __init__.py
reagent/models/: __init__.py  angular.py
reagent/parser/: __init__.py  actions.py
reagent/validation/: __init__.py
reagent_config/: __init__.py  config.yaml
tests/: sample_angularjs_form.html  sample_angularjs_form.js  test_parser_action.py  test_pipeline.py
